// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render a Caption bar with both credit and caption  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g"
    >
      <span
        className="htz-h"
      >
        The Caption
      </span>
      <span
        className="htz-i htz-j htz-k"
      >
        me
      </span>
    </div>
  </div>,
  "styles": ".htz-a{font-family:\\"Helvetica Neue\\",Helvetica,Arial,sans-serif}.htz-b{font-weight:700}.htz-c{color:#505050}.htz-h{margin-left:1rem}.htz-i{display:inline-block}.htz-j{font-weight:300}.htz-k:before{content:'קרדיט: '}@media (max-width: 79.9375em){.htz-d{font-size:2rem}.htz-e{line-height:1.5em}}@media (min-width: 80em){.htz-f{font-size:2rem}.htz-g{line-height:1.5em}}",
}
`;

exports[`should correctly render a Caption bar with only the caption, Left to right, and with dynamic background  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    >
      <span
        className="htz-i"
      >
        The Caption
      </span>
      
    </div>
  </div>,
  "styles": ".htz-a{font-family:\\"Helvetica Neue\\",Helvetica,Arial,sans-serif}.htz-b{font-weight:700}.htz-i{margin-left:1rem}@media (max-width: 79.9375em){.htz-c{color:#0B7EB5}.htz-d{font-size:2rem}.htz-e{line-height:1.5em}}@media (min-width: 80em){.htz-f{color:#FFA6A6}.htz-g{font-size:2rem}.htz-h{line-height:1.5em}}",
}
`;

exports[`should correctly render a Caption bar with only the credit  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g"
    >
      <span
        className="htz-h"
      />
      <span
        className="htz-i htz-j htz-k"
      >
        me
      </span>
    </div>
  </div>,
  "styles": ".htz-a{font-family:\\"Helvetica Neue\\",Helvetica,Arial,sans-serif}.htz-b{font-weight:700}.htz-c{color:#505050}.htz-h{margin-left:1rem}.htz-i{display:inline-block}.htz-j{font-weight:300}.htz-k:before{content:'קרדיט: '}@media (max-width: 79.9375em){.htz-d{font-size:2rem}.htz-e{line-height:1.5em}}@media (min-width: 80em){.htz-f{font-size:2rem}.htz-g{line-height:1.5em}}",
}
`;

exports[`should render no Caption bar 1`] = `
Object {
  "component": <div />,
  "styles": "",
}
`;
